Change the Title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Pure Javascript.">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <link rel="icon" type="image/x-icon" href="/javascript.png">
-    <title>Standalone Javascript Vite</title>
+    <title>Js Converter</title>
 </head>
 <body>
 
