--- a/index.html
+++ b/index.html
@@ -7,8 +7,32 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <link rel="icon" type="image/x-icon" href="/javascript.png">
     <title>Js Converter</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+     
+  
 </head>
 <body>
+
+    <nav class="navigationWrapper">
+        <div class="logoWrapper">
+          <span class="stylish">Stylish</span>
+          <span class="logo">Converter</span>
+        </div>
+        <ul class="navigation">
+          <li class="parent"><a class="link" href="#">Home</a></li>
+          <li class="parent"><a class="link" href="#">About</a></li>
+          <li class="parent" id="clients">
+            <a class="link" href="#"><i class="fas fa-minus"></i> Clients <i class="fas fa-plus"></i></a>
+          </li>
+          <li class="parent" id="services">
+            <a class="link" href="#"><i class="fas fa-minus"></i> Services <i class="fas fa-plus"></i></a>
+          </li>
+          <li class="parent"><a class="link" href="#">Contact</a></li>
+        </ul>
+      </nav>
+      
+      <a href="" class="signature" target="_blank">Designed by Rhic's Technology</a>
 
         <div class="converter-div">
             <label for="grams">Grams</label>
@@ -66,5 +90,8 @@
         <br>
 
     <script type="module" src="./src/index.js"></script>
+
+
+
 </body>
 </html>
