deploy: 58d63034a9af121677ad1524d3f607198a5f5e29

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Pure Javascript.">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <link rel="icon" type="image/x-icon" href="./javascript.png">
-    <title>Js Converter</title>
+    <title>Js-Converter</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
      
